--- a/.NETcoursePaper/EditTestClient/EditTestClient.Api/EditTestClient.Api.csproj
+++ b/.NETcoursePaper/EditTestClient/EditTestClient.Api/EditTestClient.Api.csproj
@@ -59,12 +59,12 @@
     <Compile Include="Helpers\JsonSerializeHelper.cs" />
     <Compile Include="Helpers\RequestUriHelper.cs" />
     <Compile Include="Helpers\ViewHelper.cs" />
-    <Compile Include="IQuestionApi.cs" />
-    <Compile Include="IResultApi.cs" />
-    <Compile Include="ITestApi.cs" />
-    <Compile Include="IUserApi.cs" />
+    <Compile Include="Questions\IQuestionApi.cs" />
+    <Compile Include="Results\IResultApi.cs" />
+    <Compile Include="Tests\ITestApi.cs" />
+    <Compile Include="Users\IUserApi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QuestionApi.cs" />
+    <Compile Include="Questions\QuestionApi.cs" />
     <Compile Include="Requests\QuestionRequest.cs" />
     <Compile Include="Requests\ResultRequest.cs" />
     <Compile Include="Requests\TestRequest.cs" />
@@ -73,9 +73,9 @@
     <Compile Include="Responses\ResultResponse.cs" />
     <Compile Include="Responses\TestResponse.cs" />
     <Compile Include="Responses\UserResponse.cs" />
-    <Compile Include="ResultApi.cs" />
-    <Compile Include="TestApi.cs" />
-    <Compile Include="UserApi.cs" />
+    <Compile Include="Results\ResultApi.cs" />
+    <Compile Include="Tests\TestApi.cs" />
+    <Compile Include="Users\UserApi.cs" />
     <Compile Include="UserRoles.cs" />
   </ItemGroup>
   <ItemGroup>
