--- a/.NETcoursePaper/EditTestClient/EditTestClient.Common/EditTestClient.Common.csproj
+++ b/.NETcoursePaper/EditTestClient/EditTestClient.Common/EditTestClient.Common.csproj
@@ -46,7 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions\AsyncRelayCommand.cs" />
-    <Compile Include="Extensions\BoolToVisibilityConverter.cs" />
+    <Compile Include="Converters\BoolToVisibilityConverter.cs" />
     <Compile Include="Extensions\TaskExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
