--- a/.NETcoursePaper/EditTestClient/EditTestClient.Services/EditTestClient.Services.csproj
+++ b/.NETcoursePaper/EditTestClient/EditTestClient.Services/EditTestClient.Services.csproj
@@ -48,13 +48,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CalculateResultService.cs" />
-    <Compile Include="ICalculateResultService.cs" />
-    <Compile Include="IQuestionService.cs" />
-    <Compile Include="ITestService.cs" />
+    <Compile Include="CalculateResults\CalculateResultService.cs" />
+    <Compile Include="CalculateResults\ICalculateResultService.cs" />
+    <Compile Include="Questions\IQuestionService.cs" />
+    <Compile Include="Tests\ITestService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QuestionService.cs" />
-    <Compile Include="TestService.cs" />
+    <Compile Include="Questions\QuestionService.cs" />
+    <Compile Include="Tests\TestService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -65,5 +65,6 @@
       <Name>EditTestClient.Api</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
