--- a/.NETcoursePaper/TestServer/TestServer.Services/TestServer.Services.csproj
+++ b/.NETcoursePaper/TestServer/TestServer.Services/TestServer.Services.csproj
@@ -58,19 +58,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IQuestionService.cs" />
-    <Compile Include="IResultService.cs" />
-    <Compile Include="ITestService.cs" />
-    <Compile Include="IUserService.cs" />
+    <Compile Include="Questions\IQuestionService.cs" />
+    <Compile Include="Results\IResultService.cs" />
+    <Compile Include="Tests\ITestService.cs" />
+    <Compile Include="Users\IUserService.cs" />
     <Compile Include="DTO\CustomResultDTO.cs" />
     <Compile Include="DTO\QuestionRequestDTO.cs" />
     <Compile Include="DTO\QuestionResponseDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QuestionService.cs" />
+    <Compile Include="Questions\QuestionService.cs" />
     <Compile Include="DTO\TestResponseDTO.cs" />
-    <Compile Include="ResultService.cs" />
-    <Compile Include="TestService.cs" />
-    <Compile Include="UserService.cs" />
+    <Compile Include="Results\ResultService.cs" />
+    <Compile Include="Tests\TestService.cs" />
+    <Compile Include="Users\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
