--- a/.NETcoursePaper/TestServer/TestServer/App.config
+++ b/.NETcoursePaper/TestServer/TestServer/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
 	<connectionStrings>
-		<add name="DBConnection" connectionString="data source=DESKTOP-8U9S1FH\SQLEXPRESS;Initial Catalog=TestBD;Integrated Security=True;" providerName="System.Data.SqlClient" />
+		<add name="DBConnection" connectionString="data source=DESKTOP-BOQK51T;Initial Catalog=TestBD;Integrated Security=True;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
